Update dependencies. Complete EMV implementation